--- a/assets/css/color/umons.css
+++ b/assets/css/color/umons.css
@@ -17,7 +17,7 @@ a:hover, a:focus,
 #messenger-toggle,
 .btn-primary:hover, .btn-primary:focus,
 .icon-primary.icon-hover:hover, .icon-primary.icon-hover:focus {
-	color: #a80039; 
+	color: #750028; 
 }
 
 .bg-primary,
@@ -38,7 +38,7 @@ a:hover, a:focus,
 .nav-panels > li.active > a, .nav-panels > li.active > a:focus, .nav-panels > li.active > a:hover,
 #ajax-loader:before,
 .owl-pagination .owl-page.active > span {
-	background-color: #a80039; 
+	background-color: #750028; 
 }
 
 /* Secondary */
@@ -46,7 +46,7 @@ a:hover, a:focus,
 .text-secondary,
 .btn-secondary:hover, .btn-secondary:focus,
 .icon-secondary.icon-hover:hover, .icon-secondary.icon-hover:focus {
-	color: #a80039; 
+	color: #750028; 
 }
 
 .bg-secondary,
@@ -54,7 +54,7 @@ a:hover, a:focus,
 .icon-circle.icon-secondary,
 .progress-bar-secondary,
 .te-secondary:before {
-	background-color: #a80039; 
+	background-color: #750028; 
 }
 
 /* Tertiary */
@@ -62,7 +62,7 @@ a:hover, a:focus,
 .text-tertiary,
 .btn-tertiary:hover, .btn-tertiary:focus,
 .icon-tertiary.icon-hover:hover, .icon-tertiary.icon-hover:focus {
-	color: #a80039; 
+	color: #750028; 
 }
 
 .bg-tertiary,
@@ -70,6 +70,6 @@ a:hover, a:focus,
 .icon-circle.icon-tertiary,
 .progress-bar-tertiary,
 .te-tertiary:before {
-	background-color: #a80039; 
+	background-color: #750028; 
 }
 
